<?xml version="1.0"?>
<package format="2">
  <name>rm_fc</name>
  <version>1.0.0</version>
  <description>Odometry to ACFly flight controller</description>
  <maintainer email="zzp89877@gmail.com">Zhipeng Zhong</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  
</package>
